# spotipyFree

./: .gitignore  README.md  Spotify.py  pyproject.toml
src/: Spotify.py  __init__.py
src/SpotipyFree/: Spotify.py
