[project]
name = "spotipyFree"
version = "1.0.0"
description = "A Spotipy-compatible wrapper using SpotAPI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Tzur" }]
dependencies = ["spotapi"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
